--- a/src/app/shared/components/empleados/form-empleados/form-empleados.component.html
+++ b/src/app/shared/components/empleados/form-empleados/form-empleados.component.html
@@ -17,7 +17,7 @@
                               </div>
                           </div>
                       </div>
-                      <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Municipio<span class="text-danger"> *</span></label> <input disabled=true type="text" name="nombreM" [(ngModel)]="empleado.nombre_municipio">
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">Municipio<span class="text-danger"></span></label> <input disabled=true type="text" name="nombreM" [(ngModel)]="municipio.nombre_municipios" >
                     </div>
 
                   </div>
