se corrigio el error que daba con obtener el id de municipio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,7 +75,7 @@
             </a>
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-link" href="/">
+            <a class="navigation-link" routerLink="usuario">
               <div class="row">
                 <div class="col-2">
                   <i class="fas fa-address-book"></i>
