cambiando diseño de login

--- a/src/app/usuario-login/login/login.component.html
+++ b/src/app/usuario-login/login/login.component.html
@@ -1,26 +1,21 @@
 <div class="main-container">
+  <img src="../../../assets/img/IglesiaSanJacinto.jpg" align="center" width="1365px" height="665px">
   <div class="center">
-      <h1 class="tittle"> IDS ADMINISTRACION</h1>
-      <img class="logo" src="../../../assets/img/idslogo.PNG" alt="">
-      <form class="form-container">
-
+      <!--<h1 class="tittle"> IDS ADMINISTRACION</h1>-->
+      <img class="logo" src="../../../assets/img/SanJacintoLogo.jpg" alt="">
+      <div class="form-container">
               <div class=" username">
                   <input [(ngModel)]="usuario.username" type="text" class="user-input" name="username" id="username" placeholder="Correo" autofocus required>
               </div>
               <div class=" password">
                   <input [(ngModel)]="usuario.password" type="password" class="user-input" name="password" id="password" placeholder="contraseña" required>
               </div>
-          </form>
-
+      </div>
           <button (click)='login()' type="submit">Ingresar</button>
-
-
-
-
       <a routerLink="/sendEmail" class="link">olvido su contraseña?</a>
   </div>
+  <div class="left">
+      <h1 class="tittle">Sistema para la recaudación y control de ingresos municipales</h1>
+      <button  type="submit">Consultar adeudos</button>
+  </div>
 </div>
-
-
-
-
