se oluciono el error de diseño

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -185,8 +185,10 @@
           </ul>
         </div>
       </nav>
-      <app-alerts></app-alerts>
+      <div class="col py-3 ">
+        <app-alerts></app-alerts>
       <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
 </ng-template>
