--- a/src/app/shared/components/cobrar-contribucion/cobrar-contribucion.component.html
+++ b/src/app/shared/components/cobrar-contribucion/cobrar-contribucion.component.html
@@ -206,14 +206,9 @@
       </table>
       <div class="form-group row">
         <div class="col-sm-2">
-          <input type="submit" class="btn btn-primary" (click)="irPasoDos()" value="      Siguiente     ">
+          <input type="button" class="btn btn-primary" (click)="irPasoDos()" value="      Siguiente     ">
         </div>
-        <div class="col-sm-2">
-          <input type="submit" #buttonCrear [ngClass]="buttonCrear.disabled?'btn btn-secondary disabled':'btn btn-primary'" (click)="generarFactura()" value="Generar Linea de pago"  [disabled]="lineaCaptura.form.invalid || factura.items.length== 0">
-        </div>
-        <div class="col-sm-2">
-          <input type="submit" class="btn btn-primary" (click)="irPasoDos()" value="      Cancelar     ">
-        </div>
+
       </div>
     </form>
 
