--- a/src/app/usuario-login/login/login.component.html
+++ b/src/app/usuario-login/login/login.component.html
@@ -3,15 +3,17 @@
   <div class="center">
       <!--<h1 class="tittle"> IDS ADMINISTRACION</h1>-->
       <img class="logo" src="../../../assets/img/SanJacintoLogo.jpg" alt="">
-      <div class="form-container">
-              <div class=" username">
-                  <input [(ngModel)]="usuario.username" type="text" class="user-input" name="username" id="username" placeholder="Correo" autofocus required>
-              </div>
-              <div class=" password">
-                  <input [(ngModel)]="usuario.password" type="password" class="user-input" name="password" id="password" placeholder="contraseña" required>
-              </div>
-      </div>
-          <button (click)='login()' type="submit">Ingresar</button>
+      <form action="">
+        <div class="form-container">
+          <div class=" username">
+              <input [(ngModel)]="usuario.username" type="text" class="user-input" name="username" id="username" placeholder="Correo" autofocus required>
+          </div>
+          <div class=" password">
+              <input [(ngModel)]="usuario.password" type="password" class="user-input" name="password" id="password" placeholder="contraseña" required>
+          </div>
+  </div>
+      </form>
+          <button (click)='login()' type="button">Ingresar</button>
       <a routerLink="/sendEmail" class="link">olvido su contraseña?</a>
   </div>
   <div class="left">
