se arego el busca contribuyente en consultar adeudos

--- a/src/app/usuario-login/login/login.component.html
+++ b/src/app/usuario-login/login/login.component.html
@@ -18,6 +18,6 @@
   </div>
   <div class="left">
       <h1 class="tittle">Sistema para la recaudación y control de ingresos municipales</h1>
-      <button  type="submit">Consultar adeudos</button>
+      <button routerLink="/vista-adeudos" type="button">Consultar adeudos</button>
   </div>
 </div>
