se agrego los componentes de reportes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -87,7 +87,7 @@
         </ul>
         <hr style="color: rgb(255, 255, 255); margin-top: 30px" />
         <div class="teams-title-container">
-          <p class="teams-title">TEAMS</p>
+          <p class="teams-title">Reportes</p>
         </div>
         <ul class="teams-list">
           <li class="teams-item">
@@ -98,7 +98,7 @@
                   style="color: rgb(255, 92, 160, 0.8)"
                 ></i>
               </div>
-              <div class="col-9">Marketing</div>
+              <div class="col-9"><a routerLink="/reportes">Contribuciones</a></div>
             </div>
           </li>
           <li class="teams-item">
