--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,16 +24,6 @@
       </div>
       <div class="sidebar-body">
         <ul class="navigation-list">
-          <li class="navigation-list-item">
-            <a class="navigation-link" href="/">
-              <div class="row">
-                <div class="col-2">
-                  <i class="fas fa-tachometer-alt"></i>
-                </div>
-                <div class="col-9">Inicio</div>
-              </div>
-            </a>
-          </li>
           <li class="navigation-list-item" routerLinkActive="active">
             <a class="navigation-link" routerLink="generarLinea-captura">
               <div class="row">
@@ -143,20 +133,6 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto"></ul>
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i class="fa fa-bell">
-                  <span class="badge badge-info">11</span>
-                </i>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i class="fa fa-globe">
-                  <span class="badge badge-success">11</span>
-                </i>
-              </a>
-            </li>
             <li class="nav-item dropdown minav-link">
               <a
                 class="nav-link dropdown-toggle"
@@ -166,14 +142,12 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Oscar Aragon Garcia [Administrador]
+                {{authService.usuario.username}}
               </a>
               <ul
                 class="dropdown-menu dropdown-menu-end color-border"
                 aria-labelledby="navbarDropdown"
               >
-                <li><a class="dropdown-item" href="#">Mi perfil</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" (click)="logout()"
