En estas dos clases agrege la imagen de fondo del sidebar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,11 @@
   <div class="page">
     <div class="sidebar">
       <div class="sidebar-header">
+        <img class="logo-sidebar" src="assets/img/SanJacintoLogo.jpg" width="2000px" height="66px"/>
+        <!--
         <div class="sidebar-logo-container">
           <div class="logo-container">
-            <img class="logo-sidebar" src="assets/img/logo.PNG" />
+            <img class="logo-sidebar" src="assets/img/SanJacintoLogo.jpg" />
           </div>
           <div class="brand-name-container">
             <p class="brand-name">
@@ -20,7 +22,7 @@
               <span class="brand-subname">{{ subtitulo }}</span>
             </p>
           </div>
-        </div>
+        </div>-->
       </div>
       <div class="sidebar-body">
         <ul class="navigation-list">
