--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -266,6 +266,11 @@ body.active .page .content{
   color: #c8c6bb; /*white;*/
 }
 
+.boton-principal:hover{
+  background-color: #a3585b;
+  color: #c8c6bb!important;
+}
+
 .btn-check{
   background-color: #740432;
   color: #c8c6bb!important;
