--- a/src/app/shared/components/reportes/reportes.component.html
+++ b/src/app/shared/components/reportes/reportes.component.html
@@ -30,11 +30,11 @@
   </mat-autocomplete>
 </mat-form-field>
 <button type="button" (click)="rellenarTabla()" class="btn btn-primary">Generar Reporte/s</button>
-<table class="table  table-Light table-bordered table-striped mt-3" *ngIf="mapaReportes.length>0">
-  <thead class="table-estilo text-white">
+<table class="table table-bordered table-striped tabla-estilo" *ngIf="mapaReportes.length>0">
+  <thead class="cabecera text-white">
     <tr >
         <th width="30%">Reporte</th>
-        <th width="30%"><i class="bi bi-download">Descargar</i></th>
+        <th width="30%"><i class="bi bi-download"></i>Descargar</th>
     </tr>
   </thead>
   <tbody>
